<resources>
    <string name="app_name">GastosYa</string>
    <string name="gastos_personales">Gastos Personales</string>
    <string name="agregar_gasto">Agregar Gasto</string>
    <string name="_0_00">$0.00</string>
    <string name="nombre_del_gasto">Introduzca el nombre</string>
    <string name="cantidad_del_gasto">Introduzca la cantidad</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Precio</string>
    <string name="categor_a">Categoría</string>
    <string name="iconocategoria">iconoCategoria</string>
    <string name="eliminar_gasto">Eliminar gasto </string >
    <string name="ver_resumen">Ver Resumen</string>
    <string name="resumen_de_gastos">Resumen de Gastos</string>
    <string name="home">Home</string>
    <string name="gr_fico">Gráfico</string>
    <string name="total_mes_actual_0_00">Total (mes actual): $0.00</string>
    <string name="configurar_limite">Configurar límite de gastos</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="controla_tus_finanzas_f_cilmente">Controla tus finanzas fácilmente</string>
    <string name="gastosya">GastosYa</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="por_favor_complete_todos_los_campos">Por favor, complete todos los campos</string>
    <string name="ultimos_gastos">Ultimos gastos</string>
    <string name="guardar">Guardar</string>
    <string name="l_mite_mensual">Límite mensual ($)</string>
    <string name="configurar_l_mite_mensual_de_gastos">Configurar Límite Mensual de Gastos</string>
    <string name="email1">Email</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="_2025_gastosya_todos_los_derechos_reservados">© 2025 GastosYa. Todos los derechos reservados.</string>
    <string name="realiza_tu_primer_gasto">Realiza tu primer gasto</string>
</resources>