<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:padding="16dp">



    <!-- Contenedor centrado para el slogan y el formulario -->
    <LinearLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        >


        <!-- Título "GastosYa" alineado arriba con margen -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gastosya"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
             />
        <!-- Slogan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controla_tus_finanzas_f_cilmente"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="120dp" />

        <!-- Campo Email -->
        <EditText
            android:id="@+id/setEmail"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"
            android:elevation="6dp"
            style="@style/EditTextLogin" />

        <!-- Campo Contraseña -->
        <EditText
            android:id="@+id/setPassword"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp"
            android:elevation="6dp"
            style="@style/EditTextLogin" />

        <!-- Botón "Iniciar Sesión" con texto blanco -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@android:color/white"
            android:padding="14dp"
            android:elevation="20dp"
            android:textSize="16dp"
            android:backgroundTint="@color/colorEight" />
    </LinearLayout>
    <!-- Texto de copyright en la parte inferior -->
    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="© 2025 GastosYa. Todos los derechos reservados."
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />
</RelativeLayout>